--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ h1{
 
 .main{
     height: 100px;
-    background: #d10000;
+    background: #0e0707;
     display: flex;
     justify-content: space-between;
 }
